extends Control

@onready var villageName : Label = $NavColorBase/ExternalMargins/elements/VillageName
@onready var peopleLabel : Label = $NavColorBase/ExternalMargins/elements/PeopleLabel
@onready var manaLabel : Label = $NavColorBase/ExternalMargins/elements/ManaLabel
@onready var MiasmaLabel : Label = $NavColorBase/ExternalMargins/elements/MiasmaLabel
@onready var foodLabel : Label = $NavColorBase/ExternalMargins/elements/FoodLabel
@onready var powerLabel : Label = $NavColorBase/ExternalMargins/elements/PowerLabel
